--- a/TMS/TMS/Areas/HelpDesk/Views/BusinessRule/Edit.cshtml
+++ b/TMS/TMS/Areas/HelpDesk/Views/BusinessRule/Edit.cshtml
@@ -271,8 +271,8 @@
                     </div>
                     <br />
                     <div class="row alignCenter">
-                        <a id="submitBtn" data-url="Update" class="btn btn-flat bg-olive" style="margin-right: 5px;">Update</a>
-                        <a id="cancelBtn" href="/HelpDesk/BusinessRule/" class="btn btn-flat btn-default" style="margin-right: 5px;">Cancel</a>
+                        <input type="button" id="submitBtn" data-url="Update" class="btn btn-flat bg-olive" style="margin-right: 5px;" value="Update"/>
+                        <input type="button" id="cancelBtn" onclick="location.href='/HelpDesk/BusinessRule'" class="btn btn-flat btn-default" style="margin-right: 5px;" value="Cancel"/>
                     </div>
                     <div class="row">
                         <div class="col-md-12 col-xs-12">
