--- a/TMS/TMS/Views/FAQ/Detail.cshtml
+++ b/TMS/TMS/Views/FAQ/Detail.cshtml
@@ -98,6 +98,25 @@
             border: solid 1px #bfbfbf;
             border-right: none;
         }
+
+    .ibtn-primary {
+        background-color: #3c8dbc;
+        border-color: #367fa9;
+        color: #fff;
+    }
+
+    .ibtn-primary:hover {
+        background-color: #3c8cbc;
+        border-color: #367fa9;
+        color: #fff;
+    }
+
+    .ibtn-xs {
+        padding: 1px 5px;
+        font-size: 12px;
+        line-height: 1.5;
+        border-radius: 3px;
+    }
 </style>
 
 <div class="col-lg-12">
@@ -114,6 +133,7 @@
                     <p class="pre-wrap">@Html.Raw(Model.Content)</p>
                     <p><ul class="keywords" id="keyword">@Model.Keywords</ul></p>
                 </article>
+                <div class="pre-wrap">@Html.Raw(Model.SolutionAttachmentsURL)</div>
             </li>
         </ul>
         <div class="holder hidden"></div>
