fix notify to technician when apply business rule

--- a/TMS/TMS/Areas/HelpDesk/Views/BusinessRule/Edit.cshtml
+++ b/TMS/TMS/Areas/HelpDesk/Views/BusinessRule/Edit.cshtml
@@ -181,6 +181,10 @@
         outline: 0;
     }
 
+    .requester-dropdown label {
+            white-space: pre;
+        }
+
     i {
         cursor: pointer;
     }
@@ -188,6 +192,8 @@
         i:hover {
             background: #eee;
         }
+
+        
 </style>
 
 <div class="row">
