--- a/TMS/TMS/Areas/HelpDesk/Views/BusinessRule/New.cshtml
+++ b/TMS/TMS/Areas/HelpDesk/Views/BusinessRule/New.cshtml
@@ -185,6 +185,10 @@
         outline: 0;
     }
 
+    .requester-dropdown label {
+            white-space: pre;
+    }
+
     i {
         cursor: pointer;
     }
